--- a/_sass/scss/nav.scss
+++ b/_sass/scss/nav.scss
@@ -9,7 +9,7 @@ nav{
     height: 100%; 
     cursor:default; 
     overflow-y:auto; 
-    z-index: 1; 
+    z-index: 3; 
     background-color: $brown1;
     background-image: url('/assets/img/nav_bg.png');
     background-repeat: no-repeat;
@@ -137,7 +137,7 @@ input[type=checkbox] + label {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 5;
     @media #{$x_large}{
         visibility: hidden;
     }
@@ -148,12 +148,6 @@ input[type=checkbox] + label {
     position: fixed;
     bottom: 0;
     right: 0;
-    z-index: 2;
+    z-index: 1;
     display: none;
 }
-
-// .current{
-//     font-weight: bold;
-//     text-decoration: underline;
-//     // background-color:red;
-// }
